# scrutinator

./: .gitignore  Cargo.toml  README.md
scrutinator/: Cargo.toml  build.rs
scrutinator-cli/: Cargo.toml
scrutinator-cli/src/: main.rs
scrutinator-common/: Cargo.toml
scrutinator-common/src/: lib.rs
scrutinator-ebpf/: Cargo.toml
scrutinator-ebpf/src/: main.rs
scrutinator/src/: events.rs  lib.rs  observer.rs  profile.rs
