[workspace]
resolver = "2"
members = ["scrutinator", "scrutinator-common", "scrutinator-cli"]
default-members = ["scrutinator", "scrutinator-common"]
exclude = ["scrutinator-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/natorinator/scrutinator"
authors = ["Scrutinator Contributors"]
description = "eBPF system observation library for process, file, and network tracing"

[workspace.dependencies]
# eBPF userspace
aya = "0.13"
aya-build = "0.1"
aya-log = "0.2"

# Async runtime
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# Build
cargo_metadata = "0.19"
which = "7"

# Internal
scrutinator-common = { path = "scrutinator-common" }

[profile.release]
opt-level = 3

# eBPF profile — optimized with debug info for BTF
[profile.ebpf-release]
inherits = "release"
debug = 2
codegen-units = 1
