[package]
name = "scrutinator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for scrutinator eBPF system observation"

[[bin]]
name = "scrutinator"
path = "src/main.rs"

[dependencies]
scrutinator = { path = "../scrutinator", version = "0.1.0" }
scrutinator-common = { workspace = true, features = ["user"] }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
